Fix: Some overflows and max-width.

--- a/styles/index/sections/servicios.css
+++ b/styles/index/sections/servicios.css
@@ -3,18 +3,30 @@
    ======================================== */
 
 .box_serv_sol {
+    background-color: white;
+
+    height: fit-content;
+    width: 100vw;
+
+    margin-bottom: 20px;
+}
+
+.box_serv_sol .wrapper {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 20px;
-    background-color: white;
-    padding: 30px 20px;
 
+    padding: 30px 20px;
+    margin: auto;
+    margin-bottom: 20px;
+
+    background-color: white;
     gap: 20px;
 
     height: fit-content;
-    min-width: fit-content;
+    width: 100%;
+    max-width: 1200px;
 }
 
 .servicios {
